WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116129
Unreviewed build fix after
r150090
https://bugs.webkit.org/show_bug.cgi?id=116129
Summary
Unreviewed build fix after r150090
Jaehun Lim
Reported
2013-05-14 17:11:19 PDT
Fix build.
Attachments
Patch
(2.22 KB, patch)
2013-05-14 17:15 PDT
,
Jaehun Lim
no flags
Details
Formatted Diff
Diff
Patch
(2.22 KB, patch)
2013-05-14 17:17 PDT
,
Jaehun Lim
no flags
Details
Formatted Diff
Diff
Patch
(1.34 KB, patch)
2013-05-14 18:34 PDT
,
Jaehun Lim
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Jaehun Lim
Comment 1
2013-05-14 17:15:22 PDT
Created
attachment 201774
[details]
Patch
Jaehun Lim
Comment 2
2013-05-14 17:17:29 PDT
Created
attachment 201775
[details]
Patch
WebKit Commit Bot
Comment 3
2013-05-14 18:22:38 PDT
Comment on
attachment 201775
[details]
Patch Rejecting
attachment 201775
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-02', 'apply-attachment', '--no-update', '--non-interactive', 201775, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: --force']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Parsed 3 diffs from patch file(s). patching file Tools/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Tools/DumpRenderTree/TestRunner.cpp Hunk #1 FAILED at 1840. 1 out of 1 hunk FAILED -- saving rejects to file Tools/DumpRenderTree/TestRunner.cpp.rej patching file Tools/WebKitTestRunner/TestInvocation.cpp Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output:
http://webkit-queues.appspot.com/results/468669
Jaehun Lim
Comment 4
2013-05-14 18:34:13 PDT
Created
attachment 201776
[details]
Patch
WebKit Commit Bot
Comment 5
2013-05-14 19:18:14 PDT
Comment on
attachment 201776
[details]
Patch Clearing flags on attachment: 201776 Committed
r150098
: <
http://trac.webkit.org/changeset/150098
>
WebKit Commit Bot
Comment 6
2013-05-14 19:18:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug