Fix build after r150090. https://bugs.webkit.org/show_bug.cgi?id=116129

Unreviewed build fix after r150090.

Patch by Jaehun Lim <ljaehun.lim@samsung.com> on 2013-05-14

* WebKitTestRunner/TestInvocation.cpp:
(WTR::TestInvocation::didReceiveSynchronousMessageFromInjectedBundle):

Canonical link: https://commits.webkit.org/134530@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150098 268f45cc-cd09-0410-ab3c-d52691b4dbfc